--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,44 +1,47 @@
 name: Weekly data refresh (Trials + R summary)
 
 on:
-    schedule:
-        - cron: "0 6 * * 1"  # every Monday 06:00 UTC
-    workflow_dispatch:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 6 * * 1"  # every Monday 06:00 UTC
 
 jobs:
-    refresh:
-        runs-on: ubuntu-latest
+  refresh:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repo
-                uses: actions/checkout@v4
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-            - name: Setup Python
-                uses: actions/setup-python@v5
-                with:
-                    python-version: "3.12"
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-            - name: Install Python deps
-                run: pip install -r requirements.txt
+      - name: Install Python deps
+        run: |
+          pip install -r requirements.txt
 
-            - name: Fetch trials
-                run: python scripts_py/01_fetch_trials.py
+      - name: Fetch trials
+        run: |
+          python scripts_py/01_fetch_trials.py
 
-            - name: Setup R
-                uses: r-lib/actions/setup-r@v2
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
 
-            - name: Install R deps (user library)
-                run: |
-                    mkdir -p ~/R/library
-                    R -q -e 'install.packages(c("readr","dplyr","janitor"), lib="~/R/library", repos="https://cloud.r-project.org")'
+      - name: Install R deps (user library)
+        run: |
+          mkdir -p ~/R/library
+          R -q -e 'install.packages(c("readr","dplyr","janitor"), lib="~/R/library", repos="https://cloud.r-project.org")'
 
-            - name: Run R summary
-                run: R_LIBS_USER=~/R/library Rscript scripts_r/01_trial_summary.R
+      - name: Run R summary
+        run: |
+          R_LIBS_USER=~/R/library Rscript scripts_r/01_trial_summary.R
 
-            - name: Commit updated data
-                run: |
-                    git config user.name "github-actions"
-                    git config user.email "github-actions@github.com"
-                    git add data_raw data_processed
-                    git commit -m "Auto-update trials + summary" || echo "No changes"
-                    git push
+      - name: Commit updated data
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add data_raw data_processed
+          git commit -m "Auto-update trials + summary" || echo "No changes"
+          git push
